Fixed some bugs, added visible pieces and dice-faces and made some aesthetic fixes.

--- a/main.css
+++ b/main.css
@@ -1,11 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: "Arial Narrow", Arial, sans-serif;
 }
+#n20 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 h3 {
   font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#dice,
+#round {
+  display: none;
 }
 h4 {
   font-size: 13px;
@@ -22,6 +35,7 @@ main {
   width: 1070px;
   grid-template-columns: 130px repeat(9, 90px) 130px;
   grid-template-rows: 130px repeat(9, 90px) 130px;
+  background-color: #d3f8d3;
 }
 form {
   display: flex;
@@ -35,6 +49,7 @@ form {
 }
 .name {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -42,11 +57,11 @@ form {
   display: grid;
   grid-template-rows: 150px 150px;
 }
-
 .dice {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .players {
   display: flex;
@@ -62,9 +77,10 @@ form {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
 }
 #b1 {
   grid-row: 1/1;
@@ -77,14 +93,20 @@ form {
 #b3 {
   grid-row: 1/1;
   grid-column: 11/11;
+  border-bottom: 0px;
 }
 #b4 {
   grid-row: 11/11;
   grid-column: 11/11;
 }
 h1 {
-  font-family: Impact, "Haettenschweiler", "Arial Narrow Bold", sans-serif;
-  font-size: 72px;
+  font-family: "Josefin Sans", serif;
+  font-size: 60px;
+  border: solid black 4px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 15px;
+  background-color: red;
 }
 #r1 {
   grid-column: 1/1;
